--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -108,5 +108,7 @@
       WR Kontingent nicht erfüllt
     </div>
   </div>
-  <app-events-dates [anlass]="anlass"></app-events-dates>
+  <div class="correct-margin">
+    <app-events-dates [anlass]="anlass" [viewOnly]="true"></app-events-dates>
+  </div>
 </div>
