--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="col-2">Brevet {{ wertungsrichter.brevet }}</div>
     </div>
-    <div class="row">
+    <!--div class="row">
       <div class="col">
         <mat-checkbox
           [ngClass]="{
@@ -33,7 +33,7 @@
           >Wertungsrichter hat FK</mat-checkbox
         >
       </div>
-    </div>
+    </div-->
     <div
       class="row"
       *ngIf="!isAllWertungsrichterList && wertungsrichterUser.pal"
