--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.css
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.css
@@ -22,6 +22,9 @@
 .margin-left {
   margin-left: -3px;
 }
+.correct-margin {
+  margin-left: -15px;
+}
 
 .green {
   color: var(--ztv-ok) !important;
