--- a/anmeldetool-web/src/main/web/src/app/verein/new-verein/new-verein.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/new-verein/new-verein.component.html
@@ -53,7 +53,7 @@
       [mustShowPassword]="true"
     ></app-user>
     <mat-error *ngIf="error" class="error"> {{ errorMessage }}</mat-error>
-    <button mat-button (click)="cancel()">Abbrechen</button>
+    <button mat-button type="button" (click)="cancel()">Abbrechen</button>
     <button
       mat-button
       type="submit"
