--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
@@ -3,6 +3,15 @@
   padding-right: 20px;
 }
 
+.button {
+  height: 100%;
+  width: 100%;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .drag-drop-list {
   border: solid 1px #ccc;
   background: white;
