add delete dialog

--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
@@ -75,6 +75,9 @@ button {
 }
 .aktion {
   max-width: 70px;
+  padding-left: 25px;
+  display: flex;
+  justify-content: right;
 }
 .rotate {
   /* Something you can count on */
