--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -214,7 +214,7 @@
           Aktion
         </mat-header-cell>
         <mat-cell *matCellDef="let row; let rowIndex = index" class="aktion">
-          <button mat-raised-button>
+          <button mat-raised-button class="align-right">
             <mat-icon
               class="material-icons color_gray"
               aria-hidden="false"
