--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -11,28 +11,30 @@
           >Alle Anlässe<span class="sr-only">(current)</span></a
         >
       </li>
-      <!--li class="nav-item">
-        <a
-          [routerLink]="['/anlass/new']"
-          routerLinkActive="active"
-          class="nav-link"
-          >Anlass erstellen</a
-        >
-      </li-->
     </ul>
-    <!--form class="nav navbar-nav form-inline" id="searchForm">
-      <input
-        class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-    </form-->
     <div class="navbar-header navbar-right">
       <ul class="nav navbar-nav">
+        <li class="nav-item dropdown" *ngIf="authService.isAdministrator()">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownMenuLink"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Anlässe bearbeiten
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a
+              *ngFor="let anlass of getAnlaesse()"
+              class="dropdown-item"
+              (click)="setAnlass(anlass)"
+              >{{ anlass.anlassBezeichnung }}</a
+            >
+          </div>
+        </li>
+
         <li>
           <!--a *ngIf="!authService.isAuthenticated()" [routerLink]="['user/login']">Login</a-->
           <a
