--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-9">
-      <h2>{{ getCleaned() }}</h2>
+      <h2>{{ anlass.getCleaned() }}</h2>
     </div>
     <div class="col-sm-1">
       <h2>{{ anlass.tiTu }}</h2>
