allow choosing of Admin

--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -8,7 +8,7 @@
 >
   <div class="row">
     <div class="col-sm-7">
-      <h2>{{ getCleaned() }}</h2>
+      <h2>{{ anlass.getCleaned() }}</h2>
     </div>
     <div class="col-sm-1">
       <h2>{{ anlass.tiTu }}</h2>
