--- a/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
@@ -162,7 +162,7 @@
       <div class="col-sm-1 total">
         <h3>{{ anzahlTeilnehmer }}</h3>
       </div>
-      <div class="col-sm-2 total"><h3>x 22.-- sFr.</h3></div>
+      <div class="col-sm-2 total"><h3>x 22.00 sFr.</h3></div>
       <div class="col-sm total">
         <h3>{{ anzahlTeilnehmer * 22 }}.00 sFr.</h3>
       </div>
