Abmelden und Ummelden

--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
@@ -59,6 +59,12 @@ button {
   padding: 0px;
 }
 
+.asText {
+  min-width: 20px;
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
+}
 .centeredHeader {
   display: flex;
   justify-content: left;
