--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -159,7 +159,7 @@
               : teilnahmenControls[rowIndex][colIndex].value
           }}</span>
           <mat-select
-            *ngIf="!mustEnableAnlass()"
+            *ngIf="!meldenOffen(colIndex)"
             type="text"
             placeholder="-"
             aria-label="Kategorie"
