--- a/anmeldetool-web/src/main/web/src/app/events/event-admin/event-admin.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-admin/event-admin.component.html
@@ -57,8 +57,54 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-4">
+    <div class="col-3">
       <h2>Lauflisten</h2>
+    </div>
+    <div class="col-1">
+      <mat-form-field appearance="fill">
+        <mat-label>Kategorie</mat-label>
+        <mat-select
+          type="text"
+          placeholder="-"
+          aria-label="Kategorie"
+          matInput
+          (ngModelChange)="changeKategorie($event)"
+          [ngModel]="selectedKategorie"
+        >
+          <mat-option *ngFor="let option of kategorien" [value]="option">
+            {{ option }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="col-2">
+      <mat-form-field appearance="fill">
+        <mat-label>Abteilung</mat-label>
+        <mat-select
+          type="text"
+          placeholder="-"
+          aria-label="Abteilung"
+          matInput
+          (ngModelChange)="changeAbteilung($event)"
+          [ngModel]="selectedAbteilung"
+        >
+          <mat-option *ngFor="let option of abteilungen" [value]="option">
+            {{ option }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-2">
+      <mat-form-field appearance="fill">
+        <mat-label>Anlage</mat-label>
+        <select matNativeControl required>
+          <option value="Abteilung_1">Anlage 1</option>
+          <option value="Abteilung_2">Anlage 2</option>
+          <option value="Abteilung_3">Anlage 3</option>
+          <option value="Abteilung_4">Anlage 4</option>
+        </select>
+      </mat-form-field>
     </div>
     <div class="col-sm-2">
       <button
@@ -85,6 +131,18 @@
       >
         Lauflisten PDF
       </button>
+    </div>
+  </div>
+  <div class="row" *ngIf="message">
+    <div class="col" *ngIf="!hasError">
+      <em class="success">
+        {{ message }}
+      </em>
+    </div>
+    <div class="col" *ngIf="hasError">
+      <em class="error">
+        {{ message }}
+      </em>
     </div>
   </div>
 </div>
