Fixes for no STV number displayed and incorrect Display of Summaries

--- a/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
@@ -98,49 +98,49 @@
         {{ getTeilnahmenForKategorieK4() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass" class="row">
+    <div *ngIf="brevet2Anlass" class="row">
       <div class="col-sm-2">Teilnehmer K5:</div>
       <div class="col-sm-10 text-bold">
         {{ getTeilnahmenForKategorieK5() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass && tuAnlass" class="row">
+    <div *ngIf="brevet2Anlass && tuAnlass" class="row">
       <div class="col-sm-2">Teilnehmer K5:</div>
       <div class="col-sm-10 text-bold">
         {{ getTeilnahmenForKategorieK5() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass && tiAnlass" class="row">
+    <div *ngIf="v && tiAnlass" class="row">
       <div class="col-sm-2">Teilnehmer K5A:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieK5A() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass && tiAnlass" class="row">
+    <div *ngIf="brevet2Anlass && tiAnlass" class="row">
       <div class="col-sm-2">Teilnehmer K5B:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieK5B() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass" class="row">
+    <div *ngIf="brevet2Anlass" class="row">
       <div class="col-sm-2">Teilnehmer K6:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieK6() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass && tiAnlass" class="row">
+    <div *ngIf="brevet2Anlass && tiAnlass" class="row">
       <div class="col-sm-2">Teilnehmer KD:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieKD() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass && tuAnlass" class="row">
+    <div *ngIf="brevet2Anlass && tuAnlass" class="row">
       <div class="col-sm-2">Teilnehmer KH:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieKH() }}
       </div>
     </div>
-    <div *ngIf="breve2tAnlass" class="row">
+    <div *ngIf="brevet2Anlass" class="row">
       <div class="col-sm-2">Teilnehmer K7:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieK7() }}
