--- a/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-register-summary/event-register-summary.component.html
@@ -110,7 +110,7 @@
         {{ getTeilnahmenForKategorieK5() }}
       </div>
     </div>
-    <div *ngIf="v && tiAnlass" class="row">
+    <div *ngIf="brevet2Anlass && tiAnlass" class="row">
       <div class="col-sm-2">Teilnehmer K5A:</div>
       <div class="col-sm text-bold">
         {{ getTeilnahmenForKategorieK5A() }}
