--- a/anmeldetool-web/src/main/web/src/custom-theme.scss
+++ b/anmeldetool-web/src/main/web/src/custom-theme.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,16 +19,17 @@ $at-app-warn: mat-palette($mat-red);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$at-app-theme: mat-light-theme((
-  color: (
-    primary: $at-app-primary,
-    accent: $at-app-accent,
-    warn: $at-app-warn,
+$at-app-theme: mat-light-theme(
+  (
+    color: (
+      primary: $at-app-primary,
+      accent: $at-app-accent,
+      warn: $at-app-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($at-app-theme);
-
